--- a/index.html
+++ b/index.html
@@ -6,4 +6,20 @@
     <title>Document</title>
   </head>
   <body></body>
+  <script>
+    // 1a
+    alert('Good Morning');
+    // 1b
+    alert('My name is jackson');
+    // 1c
+    console.log(10 + 5);
+    // 1d
+    console.log(20 - 5);
+    // 1e
+    console.log(2 + 2 - 5);
+    // 1f
+    document.body.innerHTML = 'Good Morning';
+    // 1g
+    document.body.innerHTML = 'My name is jackson';
+  </script>
 </html>
