--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
     document.body.innerHTML = 'Good Morning';
     // 1g
     document.body.innerHTML = 'My name is jackson';
+    // 1g
+    console.log(10 + 8 + 20);
+    // 1i
+    console.log(100 - 20 - 50 + 200);
+    // 1j
+    document.body.innerHTML = '';
   </script>
 </html>
