--- a/2.html
+++ b/2.html
@@ -18,6 +18,15 @@
     // 2e
     console.log(((1850 + 750 * 2) * 0.2) / 100);
     // 2f
-    console.log(Math.round((1899 + 1850 + 750) * 0.1) / 100);
+    console.log(Math.round(1899 + 2095 + 799) / 100);
+    // 2g
+    console.log(Math.round(1899 + 2095 + 799 + 499) / 100);
+    // 2h
+    console.log(Math.round((1899 + 2095 + 799 + 499) * 0.1) / 100);
+    // 2i
+    console.log(
+      (1899 + 2095 + 799 + 499) / 100 +
+        Math.round((1899 + 2095 + 799 + 499) * 0.1) / 100
+    );
   </script>
 </html>
