--- a/2.html
+++ b/2.html
@@ -28,5 +28,15 @@
       (1899 + 2095 + 799 + 499) / 100 +
         Math.round((1899 + 2095 + 799 + 499) * 0.1) / 100
     );
+    // 2j
+    console.log(Math.floor(2.8));
+    // 2k
+    console.log(Math.ceil(2.2));
+    // 2l
+    console.log((25 * 9) / 5 + 32);
+    // 2m
+    console.log(((86 - 32) * 5) / 9);
+    // 2n
+    console.log((-5 * 9) / 5 + 32);
   </script>
 </html>
