--- a/3.html
+++ b/3.html
@@ -18,6 +18,16 @@
     // 3e
     console.log(`Total cost: $${5 + 2}`);
     // 3f
-    alert(`Total cost: $${5 + 2}`);
+    // alert(`Total cost: $${5 + 2}`);
+    // 3g
+    console.log('Total cost:$' + (599 + 295) / 100);
+    // 3h
+    console.log(`Total cost:$${(599 + 295) / 100}`);
+    // 3i
+    // alert(`Total cost:$${(599 + 295) / 100}`);
+    // 3j
+    // alert('Total cost:$' + (599 + 295) / 100 + '\n Thankyou, coming again');
+    // 3k
+    console.log(`Items (${2 + 2}):  $${(2095 * 2 + 799 * 2) / 100}`);
   </script>
 </html>
