--- a/3.html
+++ b/3.html
@@ -29,5 +29,15 @@
     // alert('Total cost:$' + (599 + 295) / 100 + '\n Thankyou, coming again');
     // 3k
     console.log(`Items (${2 + 2}):  $${(2095 * 2 + 799 * 2) / 100}`);
+    // 3l
+    console.log(`Shipping & handling: $${(499 * 2) / 100}`);
+    // 3m
+    console.log(`Total before tax: $${(2095 * 2 + 799 * 2 + 499 * 2) / 100}`);
+    // 3n
+    console.log(
+      `Estimated tax (10%): $${
+        Math.round((2095 * 2 + 799 * 2 + 499 * 2) * 0.1) / 100
+      }`
+    );
   </script>
 </html>
