--- a/cart-qty.html
+++ b/cart-qty.html
@@ -9,10 +9,12 @@
     <button onclick="console.log(`Cart quantity: ${qty}`);">
       Show Quantity
     </button>
+    <!-- shortcut qty++ -->
     <button onclick="qty = qty + 1; console.log(`Cart quantity: ${qty}`);">
       Add to Cart
     </button>
-    <button onclick="qty = qty + 2; console.log(`Cart quantity: ${qty}`);">
+    <!-- alternate -->
+    <button onclick="qty += 2; console.log(`Cart quantity: ${qty}`);">
       +2
     </button>
     <button onclick="qty = qty + 3; console.log(`Cart quantity: ${qty}`);">
