--- a/cart-qty.html
+++ b/cart-qty.html
@@ -13,12 +13,27 @@
     <button onclick="qty = qty + 1; console.log(`Cart quantity: ${qty}`);">
       Add to Cart
     </button>
+    <button onclick="qty -= 2; console.log(`Cart quantity: ${qty}`);">
+      -2
+    </button>
+    <button onclick="qty -= 3; console.log(`Cart quantity: ${qty}`);">
+      -3
+    </button>
+    <button onclick="qty--; console.log(`Cart quantity: ${qty}`);">
+      Remofe from Cart
+    </button>
     <!-- alternate -->
     <button onclick="qty += 2; console.log(`Cart quantity: ${qty}`);">
       +2
     </button>
     <button onclick="qty = qty + 3; console.log(`Cart quantity: ${qty}`);">
       +3
+    </button>
+    <button onclick="qty += 4; console.log(`Cart quantity: ${qty}`);">
+      +4
+    </button>
+    <button onclick="qty += 5; console.log(`Cart quantity: ${qty}`);">
+      +5
     </button>
     <button onclick="qty = 0; console.log(`Cart quantity: ${qty}`);">
       Reset
