--- a/rock _paper_scissors.html
+++ b/rock _paper_scissors.html
@@ -9,12 +9,21 @@
     <p>RPS</p>
     <button
       onclick=" const randomNumber =Math.random();
+      const comM = ''
+      const player = 'rock'
     if (randomNumber >= 0 && randomNumber < 1/3){
-        console.log('rock');
+         comM = 'rock';
     }else if (randomNumber >= 1/3 && randomNumber < 2/3){
-        console.log('papper');
+         comM = 'scissors';
     }else(randomNumber >= 2/3 && randomNumber < 1);{
-        console.log('scissors')
+         comM = 'papper'
+    }
+    if (comM === 'rock'){
+        console.log('Draw')
+    }else if (comM === 'scissors'){
+        console.log('player win')
+    }else {
+        console.log('player lose')
     }
     "
     >
