--- a/6.html
+++ b/6.html
@@ -16,5 +16,14 @@
     } else {
       console.log(`Good night ${name}`);
     }
+
+    // 6d
+    let age = 6;
+    const isHoliday = true;
+    if ((age <= 6 || age >= 65) && !isHoliday) {
+      console.log('u got discount');
+    } else {
+      console.log('sorry mate');
+    }
   </script>
 </html>
