--- a/cart-qty.html
+++ b/cart-qty.html
@@ -10,29 +10,46 @@
       Show Quantity
     </button>
     <!-- shortcut qty++ -->
-    <button onclick="qty = qty + 1; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty + 1 >10? console.log('qty full') : (qty = qty + 1, console.log(`Cart quantity: ${qty}`))"
+    >
       Add to Cart
     </button>
-    <button onclick="qty -= 2; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty - 2 < 0? console.log(`not enough stock, ready ${qty}` ): (qty -= 2, console.log(`Cart quantity: ${qty}`))"
+    >
       -2
     </button>
-    <button onclick="qty -= 3; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty - 3 < 0? console.log(`not enough stock, ready ${qty}` ): (qty -= 3, console.log(`Cart quantity: ${qty}`))"
+    >
       -3
     </button>
-    <button onclick="qty--; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty - 1 < 0? console.log(`not enough stock, ready ${qty}` ): (qty--, console.log(`Cart quantity: ${qty}`))"
+    >
       Remofe from Cart
     </button>
     <!-- alternate -->
-    <button onclick="qty += 2; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty + 2> 10? console.log('qty full') : (qty += 2, console.log(`Cart quantity: ${qty}`))"
+    >
       +2
     </button>
-    <button onclick="qty = qty + 3; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty + 3 >10? console.log('qty full') : (qty = qty + 3, console.log(`Cart quantity: ${qty}`))"
+    >
       +3
     </button>
-    <button onclick="qty += 4; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty + 4 > 10? console.log('qty full') : (qty += 4, console.log(`Cart quantity: ${qty}`))"
+    >
       +4
     </button>
-    <button onclick="qty += 5; console.log(`Cart quantity: ${qty}`);">
+    <button
+      onclick="qty +5 >10? console.log('qty full') : (qty += 5, console.log(`Cart quantity: ${qty}`)
+      );"
+    >
       +5
     </button>
     <button onclick="qty = 0; console.log(`Cart quantity: ${qty}`);">
