--- a/rock _paper_scissors.html
+++ b/rock _paper_scissors.html
@@ -6,75 +6,57 @@
     <title>RPS</title>
   </head>
   <body>
-    <p>RPS</p>
-    <button
-      onclick=" 
-     const comM = pickComputer();
-    const player1 = 'rock'
-
-    if (comM === 'rock'){
-        result = 'draw'
-    }else if (comM === 'scissors'){
-        result = 'you win'
-    }else if(comM === 'papper'){
-        result = 'you lose'
-    }
-
-    alert(`you pick ${player1} and computer pick ${comM} and ${result}`);
-    "
-    >
-      Rock
-    </button>
-    <button
-      onclick=" 
-      const comM2 = pickComputer();
-    const player2 = 'papper'
-     
-      if (comM2 === 'rock'){
-          result = 'you win'
-      }else if (comM2 === 'scissors'){
-          result = 'you lose'
-      }else if(comM2 === 'papper'){
-          result = 'draw'
-      }
-
-  alert(`you pick ${player2} and computer pick ${comM2} and ${result}`);
-  "
-    >
-      Papper
-    </button>
-    <button
-      onclick=" 
-    const comM3 = pickComputer();
-  const player3 = 'scissors'
-   
-    if (comM3 === 'rock'){
-        result = 'you lose'
-    }else if (comM3 === 'scissors'){
-        result = 'draw'
-    }else if(comM3 === 'papper'){
-        result = 'you win'
-    }
-
-alert(`you pick ${player3} and computer pick ${comM3} and ${result}`);
-"
-    >
-      Scissors
-    </button>
+    <button onclick=" playGame('rock')">Rock</button>
+    <button onclick=" playGame('paper')">Papper</button>
+    <button onclick=" playGame('scissors')">Scissors</button>
   </body>
   <script>
-    let result = '';
-    function pickComputer() {
-      const randomNumber = Math.random();
-      let comM = '';
-      if (randomNumber >= 0 && randomNumber < 1 / 3) {
-        comM = 'rock';
-      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
-        comM = 'scissors';
-      } else if (randomNumber >= 2 / 3 && randomNumber < 1) {
-        comM = 'papper';
+    function playGame(playerMove) {
+      const comM = pickComM();
+
+      let result = '';
+
+      if (playerMove === 'scissors') {
+        if (comM === 'rock') {
+          result = 'you lose';
+        } else if (comM === 'paper') {
+          result = 'you win';
+        } else if (comM === 'scissors') {
+          result = 'draw';
+        }
+      } else if (playerMove === 'rock') {
+        if (comM === 'rock') {
+          result = 'draw';
+        } else if (comM === 'paper') {
+          result = 'you lose';
+        } else if (comM === 'scissors') {
+          result = 'you win';
+        }
+      } else if (playerMove === 'paper') {
+        if (comM === 'rock') {
+          result = 'you win';
+        } else if (comM === 'paper') {
+          result = 'draw';
+        } else if (comM === 'scissors') {
+          result = 'you lose';
+        }
       }
-      return comM;
+      alert(` You pick ${playerMove} computer pick ${comM} and ${result}`);
+    }
+
+    function pickComM() {
+      const randomNumber = Math.random();
+
+      let computerMove = '';
+
+      if (randomNumber >= 0 && randomNumber < 1 / 3) {
+        computerMove = 'rock';
+      } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
+        computerMove = 'paper';
+      } else if (randomNumber >= 2 / 3 && randomNumber < 3 / 3) {
+        computerMove = 'scissors';
+      }
+      return computerMove;
     }
   </script>
 </html>
