--- a/8.html
+++ b/8.html
@@ -30,5 +30,13 @@
         ' ' +
         'stars'
     );
+    // conver object to JSOn
+    console.log(JSON.stringify(objek));
+
+    // convert json to object
+    const jsonStr = JSON.stringify(objek);
+    JSON.parse(jsonStr);
+
+    console.log(JSON.parse(jsonStr));
   </script>
 </html>
