--- a/8.html
+++ b/8.html
@@ -69,5 +69,25 @@
     // const message = object4.message;
     const { yolo, stub } = object4;
     console.log(yolo, stub);
+
+    // shorthand property
+    const objec5 = {
+      // stub: stub,
+      stub,
+      // this is shorthand property
+
+      // this is longhand property
+      shit: function function1() {
+        console.log('kabar apa');
+      },
+
+      // this is shorthand property
+      dumb() {
+        console.log('baik');
+      },
+    };
+    console.log(objec5);
+    objec5.shit();
+    objec5.dumb();
   </script>
 </html>
