--- a/9project.html
+++ b/9project.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      .but {
+        background-color: black;
+        color: white;
+        padding: 5px 10px;
+        border-radius: 20px;
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
