done css amazon

--- a/9project.html
+++ b/9project.html
@@ -18,13 +18,20 @@
         border-radius: 20px;
         border: none;
       }
+      .amazon {
+        margin-top: 40px;
+        font-weight: bold;
+      }
+      .js-input {
+        padding: 10px;
+      }
     </style>
     <title>Document</title>
   </head>
   <body>
     <h2>Youtube subscribe button</h2>
     <button class="but" onclick="subs()">Subscribe</button>
-    <p>Amazon Shipping</p>
+    <p class="amazon">Amazon Shipping</p>
     <input
       class="js-input"
       onkeydown="if (event.key === 'Enter'){
