--- a/10rps.html
+++ b/10rps.html
@@ -17,11 +17,19 @@
         height: 100px;
         border-radius: 50%;
         padding: 10px;
+        background-color: transparent;
       }
       body {
         color: white;
       }
       .button-game {
+        border-radius: 50%;
+      }
+
+      .js-move img {
+        background-color: white;
+        width: 50px;
+        padding: 10px;
         border-radius: 50%;
       }
     </style>
@@ -30,10 +38,10 @@
   <body>
     <p class="title">Rock Paper Scissors</p>
     <button class="button-game" onclick=" playGame('rock')">
-      <img src="fist.png" alt="" class="icon" />
+      <img src="rock.png" alt="" class="icon" />
     </button>
     <button class="button-game" onclick=" playGame('paper')">
-      <img src="hand-paper.png" alt="" class="icon" />
+      <img src="paper.png" alt="" class="icon" />
     </button>
     <button class="button-game" onclick=" playGame('scissors')">
       <img src="scissors.png" alt="" class="icon" />
@@ -112,9 +120,10 @@
 
       document.querySelector('.js-result').innerHTML = result;
 
-      document.querySelector(
-        '.js-move'
-      ).innerHTML = ` You pick ${playerMove} computer pick ${comM}`;
+      document.querySelector('.js-move').innerHTML = ` You pick
+      <img src="${playerMove}.png" alt="" class="move-image" />
+      and computer pick
+      <img src="${comM}.png" alt="" class="move-image" />`;
 
       //       alert(` You pick ${playerMove} computer pick ${comM} and ${result}
       // win: ${score.win}, lose: ${score.lose}, draw: ${score.draw}`);
