--- a/calfinal.html
+++ b/calfinal.html
@@ -3,62 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {
-        background-color: black;
-        color: white;
-      }
-      .display {
-        color: white;
-        font-size: 30px;
-      }
-      .math {
-        border: none;
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        border-radius: 50%;
-        font-weight: bold;
-        font-size: 30px;
-        background-color: orange;
-        margin: 5px;
-      }
-      button {
-        border: none;
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        border-radius: 50%;
-        font-weight: bold;
-        font-size: 30px;
-        background-color: white;
-        margin: 5px;
-      }
-      .clear {
-        border: none;
-        width: 100px;
-        height: 40px;
-        text-align: center;
-        border-radius: 0%;
-        font-weight: bold;
-        color: white;
-        font-size: 30px;
-        background-color: rgb(9, 185, 244);
-        margin: 5px;
-      }
-      .hasil {
-        border: none;
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        border-radius: 50%;
-        font-weight: bold;
-        color: white;
-        font-size: 30px;
-        background-color: rgb(9, 185, 244);
-        margin: 5px;
-      }
-    </style>
+    <link rel="stylesheet" href="style/cal.css" />
     <title>Cal</title>
   </head>
   <body>
