--- a/calfinal.html
+++ b/calfinal.html
@@ -47,25 +47,5 @@
       </button>
     </p>
   </body>
-  <script>
-    let calculation = localStorage.getItem('calculation') || '';
-
-    displayCal();
-
-    function displayCal() {
-      document.querySelector('.display').innerHTML =
-        localStorage.getItem('calculation');
-    }
-    function calC(value) {
-      calculation += value;
-      console.log(calculation);
-      localStorage.setItem('calculation', calculation);
-      displayCal();
-    }
-
-    // optional for reuse code
-    function saveCal() {
-      localStorage.setItem('calculation', calculation);
-    }
-  </script>
+  <script src="script/cal.js"></script>
 </html>
