--- a/arrayloop.html
+++ b/arrayloop.html
@@ -21,5 +21,32 @@
 
     // how many value in array
     console.log(myArray.length);
+
+    // loop
+
+    // make a variable i = 1
+    let i = 1;
+
+    // make a loop for 1
+    // when i <= 5 it will make a log in console until i = 5
+    while (i <= 5) {
+      console.log(i);
+      i = i + 1;
+    }
+
+    // shortcut loop
+    // its good for standart loop that has variable, then condition, then increment
+    for (let i = 1; i <= 5; i++) {
+      console.log(i);
+    }
+
+    // non standart loop
+
+    let randomNumber = 0;
+
+    while (randomNumber < 0.7) {
+      randomNumber = Math.random();
+    }
+    console.log(randomNumber);
   </script>
 </html>
