for loop, while loop

--- a/11ex.html
+++ b/11ex.html
@@ -33,5 +33,27 @@
     }
 
     arraySwap(str);
+
+    // const count = [];
+
+    for (let i = 0; i <= 10; i = i + 2) {
+      console.log(i);
+    }
+
+    for (let i = 5; i >= 0; i--) {
+      console.log(i);
+    }
+
+    let i = 0;
+    while (i < 10) {
+      i += 2;
+      console.log(i);
+    }
+
+    let p = 5;
+    while (p >= 0) {
+      console.log(p);
+      p--;
+    }
   </script>
 </html>
