--- a/11ex.html
+++ b/11ex.html
@@ -34,8 +34,6 @@
 
     arraySwap(str);
 
-    // const count = [];
-
     for (let i = 0; i <= 10; i = i + 2) {
       console.log(i);
     }
@@ -55,5 +53,17 @@
       console.log(p);
       p--;
     }
+
+    const numbre = [15, 16, 17];
+
+    function addOne(array) {
+      for (let i = 0; i < numbre.length; i++) {
+        array = numbre[i] + 1;
+        // increase = array;
+        console.log(array);
+      }
+    }
+
+    addOne(numbre);
   </script>
 </html>
