--- a/11ex.html
+++ b/11ex.html
@@ -131,5 +131,27 @@
 
     const wey = [3];
     minMax(wey);
+
+    function countWords(words) {
+      const result = {};
+
+      for (let i = 0; i < words.length; i++) {
+        const word = words[i];
+
+        // result[word] adds/accesses a property using whatever is
+        // saved inside the 'word' variable.
+        // If word = 'apple', result[word] will do result['apple']
+        // If word = 'grape', result[word] will do result['grape']
+        if (!result[word]) {
+          result[word] = 1;
+        } else {
+          result[word]++;
+        }
+      }
+
+      return result;
+    }
+
+    console.log(countWords(['apple', 'grape', 'apple', 'apple']));
   </script>
 </html>
