--- a/11ex.html
+++ b/11ex.html
@@ -153,5 +153,21 @@
     }
 
     console.log(countWords(['apple', 'grape', 'apple', 'apple']));
+
+    function countNum(array) {
+      const result = {};
+
+      for (i = 0; i < array.length; i++) {
+        const num = array[i];
+
+        if (!result[num]) {
+          result[num] = 1;
+        } else {
+          result[num]++;
+        }
+      }
+      return result;
+    }
+    console.log(countNum([1, 1, 1, 3]));
   </script>
 </html>
