--- a/11todo.html
+++ b/11todo.html
@@ -8,6 +8,7 @@
   <body>
     <p>Todo List</p>
     <input type="text" class="js-input" />
+    <input type="date" class="js-date" />
     <button onclick="addList();">Add</button>
     <div class="tdList"></div>
   </body>
