--- a/11todo.html
+++ b/11todo.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/todo.css" />
     <title>Todo</title>
   </head>
   <body>
     <p>Todo List</p>
     <input type="text" class="js-input" />
     <input type="date" class="js-date" />
-    <button onclick="addList();">Add</button>
+    <button class="add" onclick="addList();">Add</button>
     <div class="tdList"></div>
   </body>
   <script src="script/11.js"></script>
