--- a/arrayloop.html
+++ b/arrayloop.html
@@ -94,5 +94,16 @@
     // destructure array
     const [firstValue, secondValue] = [1, 2, 3];
     console.log(firstValue);
+
+    // break for loop
+
+    for (i = 0; i <= 10; i++) {
+      console.log(i);
+      // ini akan menampilkan hasil sampai 10
+      if (i === 8) {
+        break;
+        // ini akan menghentikan loop hanya sampai 8
+      }
+    }
   </script>
 </html>
