--- a/11ex.html
+++ b/11ex.html
@@ -169,5 +169,30 @@
       return result;
     }
     console.log(countNum([1, 1, 1, 3]));
+
+    // 11o
+    let stra = ['a', 'search', ''];
+
+    let index = -1;
+
+    for (let i = 0; i < stra.length; i++) {
+      if (stra[i] === 'search') {
+        index = i;
+        break;
+      }
+    }
+    console.log(index);
+
+    stra = ['not', 'found'];
+    index = -1;
+    let count = 0;
+    for (let i = 0; i < stra.length; i++) {
+      if (stra[i] === 'search') {
+        index = i;
+        break;
+      }
+    }
+
+    console.log(index);
   </script>
 </html>
