--- a/11ex.html
+++ b/11ex.html
@@ -212,9 +212,11 @@
     // 11r
 
     function removeEgg(foods) {
-      let result = [];
+      const result = [];
+      let removedEgg = 0;
       for (i = 0; i < foods.length; i++) {
-        if (foods[i] === 'egg') {
+        if (foods[i] === 'egg' && removedEgg < 2) {
+          removedEgg++;
           continue;
         } else {
           result.push(foods[i]);
@@ -223,6 +225,6 @@
       console.log(result);
     }
 
-    removeEgg(['tea', 'egg', 'chocolate']);
+    removeEgg(['tea', 'egg', 'egg', 'egg', 'egg', 'egg', 'chocolate']);
   </script>
 </html>
